--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -97,3 +97,16 @@ div.description {
 .standard-padding {
   padding: 20px;
 }
+.user-page-title {
+  font-size: 24.5px;
+  float: left;
+  font-weight: bold;
+  margin-left: 10px;
+}
+.user-page-img {
+  float: left;
+  margin: 0px 0px 0px 0px;
+  border: 0px solid #d8d8d8;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
