--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -13,12 +13,12 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="nav pull-left nav-left-content">
-          <h1>Map Blog</h1>
+          <h1><a href="<%= root_url %>">Map Blog</a></h1>
         </div>
         <div class="nav pull-right nav-buttons">
         <% if current_user %>
           <img class="nav-img" src="<%= current_user.user_photo.url("small") %>"></img>
-          <p><%= current_user.username %></p>
+          <p><a href="#/users/<%= current_user.id %>"><%= current_user.username %></a></p>
           <a class="sign-out-button" href="<%= backbone_signout_session_url %>"><i class="fa fa-sign-out sign-out-button"></i></a>
         <% else %>
           <a href="#signin"><i class="fa fa-sign-in"></i></a>
