--- a/app/assets/templates/sign_out.jst.ejs
+++ b/app/assets/templates/sign_out.jst.ejs
@@ -1,3 +1,3 @@
 <img class="nav-img" src="<%= user.get("thumbnail_url") %>"></img>
-<p><%= user.get("username") %></p>
+<p><a href="#/users/<%= user.id %>"><%= user.get("username") %></a></p>
 <a class="sign-out-button" href="/session/backbone_signout"><i class="fa fa-sign-out sign-out-button"</a>
