minor UI tweaks, text and link color change

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,8 +27,8 @@
 // See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
-// @linkColor: #ff0000;
-@textColor: #FFFFFF;
+@linkColor: #8CE2D0; 
+@textColor: #8CE2D0; 
 
 body {
   background: url("BackgroundMap.jpg");
@@ -109,4 +109,10 @@ div.description {
   border: 0px solid #d8d8d8;
   -webkit-border-radius: 2px;
   border-radius: 2px;
+}
+.hidden {
+  visibility: hidden;
+}
+.table-striped tbody > tr:nth-child(odd) > td, .table-striped tbody > tr:nth-child(odd) > th {
+  background: url("background.png");
 }
