--- a/app/assets/templates/map_trips/detail.jst.ejs
+++ b/app/assets/templates/map_trips/detail.jst.ejs
@@ -37,6 +37,9 @@
     <ul class="media-list comments">
     </ul>
   </div>
+  <div class="standard-padding">
+    <a href="" class="show_hide_button btn">Hide Photo Loader</a>
+  </div>
 <div class="row">
   <div class="container span11" id="photo_loader">
   </div>
