--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -26,6 +26,12 @@
         </div>
       </div>
     </div>
+    <div class="success-messages">
+    </div>
+    <div class="information-messages">
+    </div>
+    <div class="error-messages">
+    </div>
     <% if flash[:errors] %>
       <% flash[:errors].each do |error| %>
         <h5> <%= error %> </h5>
