--- a/app/assets/templates/users/new.jst.ejs
+++ b/app/assets/templates/users/new.jst.ejs
@@ -81,8 +81,8 @@
       {% if (file.error) { %}
         <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
         {% } else if (o.files.valid && !i) { %}
-        <td class="start">{% if (!o.options.autoUpload) { %}
-          <button class="btn btn-primary">
+        <td class="start ">{% if (!o.options.autoUpload) { %}
+          <button class="btn btn-primary hidden">
             <!-- <i class="icon-upload icon-white"></i> -->
             <!-- <span>{%=locale.fileupload.start%}</span> -->
           </button>
@@ -90,7 +90,7 @@
         {% } else { %}
         {% } %}
       <td class="cancel">{% if (!i) { %}
-        <button class="btn btn-warning">
+        <button class="btn btn-warning hidden">
           <!-- <i class="icon-ban-circle icon-white"></i> -->
           <!-- <span>{%=locale.fileupload.cancel%}</span> -->
         </button>
