--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,7 +28,8 @@
 //
 // Example:
 @linkColor: #8CE2D0; 
-@textColor: #8CE2D0; 
+@textColor: #DCDDDE; 
+@headingsColor: #8CE2D0;
 
 body {
   background: url("BackgroundMap.jpg");
@@ -93,6 +94,7 @@ div.description {
   margin: 10px 10px;
   line-height: 20px;
   display: inline;
+  color: #8CE2D0;
 }
 .standard-padding {
   padding: 20px;
@@ -102,6 +104,7 @@ div.description {
   float: left;
   font-weight: bold;
   margin-left: 10px;
+  color: #8CE2D0;
 }
 .user-page-img {
   float: left;
