--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -13,7 +13,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="nav pull-left nav-left-content">
-          <h1><a href="<%= root_url %>">Map Blog</a></h1>
+          <a href="<%= root_url %>"><h1>Map Blog</h1></a>
         </div>
         <div class="nav pull-right nav-buttons">
         <% if current_user %>
