--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -128,3 +128,33 @@ div.description {
 a:hover {
   text-decoration: none;
 }
+
+.btn:hover {
+  color: darken(@btnPrimaryBackground, 15%);
+}
+
+div.comment-divider {
+  border-top: 1px solid #DCDDDE;
+}
+.media {
+  margin: 0px;
+  padding: 5px;
+}
+.comments li.media {
+  margin-top: 0px;
+}
+
+.btn-primary.no-gradient {
+  background-color: #B9512E;
+  background-image: none;
+  backgroun-repeat: no-repeat;
+  filter: none;
+}
+
+.sign-out-button {
+  color: @headingsColor;
+}
+
+.sign-in-button {
+  color: @headingsColor;
+}
