--- a/app/assets/stylesheets/map_trips.css.scss
+++ b/app/assets/stylesheets/map_trips.css.scss
@@ -43,7 +43,10 @@ h5.comment-username {
 }
 
 p.comment-paragraph {
-  margin: 0;
+  margin: 0px 5px 0px 0px ;
+}
+.media a {
+  line-height: 14px;
 }
 img.comment-image {
   width: 32px;
