--- a/app/assets/templates/map_trips/index.jst.ejs
+++ b/app/assets/templates/map_trips/index.jst.ejs
@@ -5,7 +5,7 @@
   </div>
   <div class="span8 transparent-background">
     <div class="standard-padding">
-      <a href="#/new" class="btn btn-primary pull-right"><i class="fa fa-plus"></i> Map Trip</a>
+      <a href="#/new" class="btn btn-primary no-gradient pull-right"><i class="fa fa-plus"></i> Map Trip</a>
       <h3>Your Map Trips</h3>
       <hr>
       <div class="map_trips">
