--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -21,7 +21,7 @@
           <p><a href="#/users/<%= current_user.id %>"><%= current_user.username %></a></p>
           <a class="sign-out-button" href="<%= backbone_signout_session_url %>"><i class="fa fa-sign-out sign-out-button"></i></a>
         <% else %>
-          <a href="#signin"><i class="fa fa-sign-in"></i></a>
+          <a class="sign-in-button" href="#signin"><i class="fa fa-sign-in"></i></a>
         <% end %>
         </div>
       </div>
