--- a/app/assets/templates/session/new.jst.ejs
+++ b/app/assets/templates/session/new.jst.ejs
@@ -9,9 +9,9 @@
       <input type="password" name="user[password]" placeholder="Password">
       <br>
       <br>
-      <input class="btn" type="submit" value="Sign In">
+      <input class="btn btn-primary no-gradient" type="submit" value="Sign In">
     </form>
-    <h5><a href="#users/new">Sign Up Today!</a></h5>
+    <h5><a href="#users/new"><i class="fa fa-plus"> <i class="fa fa-user"></i></i> Sign Up Today!</a></h5>
     
   </div>
 </div>
