--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -103,6 +103,9 @@ div.description {
 .standard-padding {
   padding: 20px;
 }
+.standard-margin{
+  margin: 15px;
+}
 .user-page-title {
   font-size: 24.5px;
   float: left;
