--- a/app/assets/templates/map_trips/detail.jst.ejs
+++ b/app/assets/templates/map_trips/detail.jst.ejs
@@ -1,4 +1,7 @@
 <div class="transparent-background">
+  <div class="success-messages"></div>
+  <div class="warning-messages"></div>
+  <div class="error-messages"></div>
   <h2 class="standard-left-margin"><%= mapTrip.escape("title") %></h2>
   <div class="row">
     <div class="span5">
@@ -41,7 +44,7 @@
   </div>
 
   <div class="standard-padding">
-    <a href="" class="show_hide_button btn">Hide Photo Loader</a>
+    <a href="" class="show_hide_button btn btn-primary no-gradient">Hide Photo Loader</a>
   </div>
 <div class="row">
   <div class="container span11" id="photo_loader">
