--- a/app/assets/templates/map_trips/new_edit.jst.ejs
+++ b/app/assets/templates/map_trips/new_edit.jst.ejs
@@ -1,6 +1,9 @@
 <div class="span4">
 </div>
 <div class="span4 transparent-background new-map-trip-content">
+  <div class="success-messages"></div>
+  <div class="warning-messages"></div>
+  <div class="error-messages"></div>
   <div class="standard-padding">
     <h2><%= title %></h2>
     <h3> Where did you go? </h3>
@@ -19,7 +22,7 @@
       </fieldset>
       <br>
 
-      <input type="submit" value="<%= buttonText %>">
+      <input class="btn btn-primary no-gradient" type="submit" value="<%= buttonText %>">
     </form>
   </div>
 </div>
