--- a/app/assets/templates/session/new.jst.ejs
+++ b/app/assets/templates/session/new.jst.ejs
@@ -2,6 +2,9 @@
 </div>
 <div class="span4 sign-in">
   <div class="sign-in-content">
+    <div class="success-messages"></div>
+    <div class="warning-messages"></div>
+    <div class="error-messages"></div>
     <h3>Sign In</h3>
     <form class="sign_in_form">
       <input type="text" name="user[email]" placeholder="Email">
