--- a/app/assets/templates/users/detail.jst.ejs
+++ b/app/assets/templates/users/detail.jst.ejs
@@ -2,6 +2,9 @@
 </div>
 <div class="span8">
   <div class="transparent-background">
+    <div class="success-messages"></div>
+    <div class="warning-messages"></div>
+    <div class="error-messages"></div>
     <div class="standard-padding"> 
       <div class="row">
       <img class="user-page-img" src="<%= user.get("thumbnail_url") %>"></img>
