--- a/app/assets/templates/map_trips/index.jst.ejs
+++ b/app/assets/templates/map_trips/index.jst.ejs
@@ -4,6 +4,9 @@
   <div class="span2">
   </div>
   <div class="span8 transparent-background">
+    <div class="success-messages"></div>
+    <div class="warning-messages"></div>
+    <div class="error-messages"></div>
     <div class="standard-padding">
       <a href="#/new" class="btn btn-primary no-gradient pull-right"><i class="fa fa-plus"></i> Map Trip</a>
       <h3>Your Map Trips</h3>
