--- a/app/assets/templates/users/new.jst.ejs
+++ b/app/assets/templates/users/new.jst.ejs
@@ -1,6 +1,9 @@
 <div class="span4">
 </div>
 <div class="span4 transparent-background">
+  <div class="success-messages"></div>
+  <div class="warning-messages"></div>
+  <div class="error-messages"></div>
   <div class="standard-padding">
     <div class="container" id="photo_loader">
       <h3> Sign Up</h3>
@@ -26,7 +29,7 @@
             </button>
         <table class="table"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
         </table>
-            <button type="submit" class="btn btn-primary start">
+            <button type="submit" class="btn btn-primary start no-gradient">
               <span>Sign Up!</span>
             </button>
           </div>
