--- a/app/assets/templates/map_trips/photo_loader.jst.ejs
+++ b/app/assets/templates/map_trips/photo_loader.jst.ejs
@@ -54,51 +54,51 @@
         </td>
         <td class="description"><input name="map_photo[description]" placeholder="Description"></input></td>
         <td class="map_trip_id"><input type="hidden" name="map_trip_id" value="<%= mapTrip.id %>"></input></td>
-        <td class="start">{% if (!o.options.autoUpload) { %}
-          <button class="btn btn-primary no-gradient">
-            <i class="icon-upload icon-white"></i>
-            <span>{%=locale.fileupload.start%}</span>
-          </button>
-          {% } %}</td>
-        {% } else { %}
-        <td colspan="2"></td>
-        {% } %}
-      <td class="cancel">{% if (!i) { %}
-        <button class="btn btn-warning">
-          <i class="icon-ban-circle icon-white"></i>
-          <span>{%=locale.fileupload.cancel%}</span>
-        </button>
-        {% } %}</td>
-    </tr>
-    {% } %}
-</script>
-<!-- The template to display files available for download -->
-<script id="template-download" type="text/x-tmpl">
-  {% for (var i=0, file; file=o.files[i]; i++) { %}
-    <tr class="template-download fade">
-      {% if (file.error) { %}
-        <td></td>
-        <td class="name"><span>{%=file.name%}</span></td>
-        <!-- <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td> -->
-        <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
-        {% } else { %}
-        <td class="preview">{% if (file.thumbnail_url) { %}
-          <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" download="{%=file.name%}"><img src="{%=file.thumbnail_url%}"></a>
-          {% } %}</td>
-        <td class="name">
-          <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
-        </td>
-        <!-- <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td> -->
-        <!-- <td colspan="2"></td> -->
-        {% } %}
-        <td class="delete">
-          <button class="btn btn-danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
-            <i class="icon-trash icon-white"></i>
-            <span>{%=locale.fileupload.destroy%}</span>
-          </button>
-          <input type="checkbox" name="delete" value="1">
-        </td>
-    </tr>
-  {% } %}
-</script>
+				<td class="start">{% if (!o.options.autoUpload) { %}
+					<button class="btn btn-primary">
+						<i class="icon-upload icon-white"></i>
+						<span>{%=locale.fileupload.start%}</span>
+					</button>
+				{% } %}</td>
+				{% } else { %}
+					<td colspan="2"></td>
+				{% } %}
+				<td class="cancel">{% if (!i) { %}
+					<button class="btn btn-warning">
+						<i class="icon-ban-circle icon-white"></i>
+						<span>{%=locale.fileupload.cancel%}</span>
+					</button>
+				{% } %}</td>
+			</tr>
+		{% } %}
+		</script>
+		<!-- The template to display files available for download -->
+		<script id="template-download" type="text/x-tmpl">
+{% for (var i=0, file; file=o.files[i]; i++) { %}
+	<tr class="template-download fade">
+	{% if (file.error) { %}
+		<td></td>
+			<td class="name"><span>{%=file.name%}</span></td>
+			<!-- <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td> -->
+			<td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
+			{% } else { %}
+		<td class="preview">{% if (file.thumbnail_url) { %}
+			<a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" download="{%=file.name%}"><img src="{%=file.thumbnail_url%}"></a>
+			{% } %}</td>
+		<td class="name">
+			<a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
+			</td>
+			<!-- <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td> -->
+			<!-- <td colspan="2"></td> -->
+			{% } %}
+	<td class="delete">
+		<button class="btn btn-danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
+		<i class="icon-trash icon-white"></i>
+		<span>{%=locale.fileupload.destroy%}</span>
+		</button>
+		<input type="checkbox" name="delete" value="1">
+		</td>
+		</tr>
+		{% } %}
+		</script>
 
